--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -56,7 +56,7 @@
                     <td>{{ source.description }}</td>
                     <td>
                         <div class="entity-actions btn-group">
-                            <form method="post" class="action-add" action="{{ url("mapbender_manager_application_addlayerset",{"slug":application.slug} ) }}" title="{{ 'Add' | trans }}" >
+                            <form method="post" class="action-add" action="{#{ url("mapbender_manager_application_addlayerset",{"slug":application.slug} ) }#}" title="{{ 'Add' | trans }}" >
                                 <input type="hidden" name="sourceId" value="{{ source.id }}" />
                                 <input class="btn" type="submit" value="{{ 'Add' | trans }}" />
                             </form>
