--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
@@ -1,39 +1,34 @@
 {% extends "FOMManagerBundle::manager.html.twig" %}
 
-{% block title %}{{ 'Service Repository' | trans }}{% endblock %}
+{% block title %}{{ 'Services' | trans }}{% endblock %}
 
 {% block manager_content %}
-<table class="table table-striped" id="repository-list">
-    <thead>
-        <tr>
-            <th>{{ 'Id' | trans }}</th>
-            <th>{{ 'Type' | trans }}</th>
-            <th>{{ 'Title' | trans }}</th>
-            <th>{{ 'Alias' | trans }}</th>
-            <th>{{ 'Description' | trans }}</th>
-            <th>{{ 'Actions' | trans }}</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for source in sources %}
-        <tr data-source-id="{{ source.id }}">
-            <td>{{ source.id }}</td>
-            <td>{{ source.type }}</td>
-            <td>{{ source.title }}</td>
-            <td>{{ source.alias }}</td>
-            <td>{{ source.description }}</td>
-            <td>
-                <div class="entity-actions btn-group">
-                    <a class="action-view btn" href="{{ url("mapbender_manager_repository_view",{"sourceId":source.id}) }}" title="{{ 'View' | trans }}">{{ 'View' | trans }}</a>
-                    <a class="action-delete btn btn-warning" href="{{ url("mapbender_manager_repository_delete",{"source":source.id,"return":"index"}) }} " title="{{ 'Edit' | trans }}">{{ 'Delete' | trans }}</a>
-                </div>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
 
-<div class="repository-actions btn-group">
-    <a class="action-add btn btn-primary" href="{{ url("mapbender_manager_repository_new") }}" title="{{ 'Add new source' | trans }}">{{ 'Add' | trans }}</a>
-</div>
+
+<label for="inputFilterServices" class="label left">Filter:</label><input id="inputFilterServices" type="text" class="input listFilterInput filterService">
+<a class="button right" href="{{ url("mapbender_manager_repository_new") }}" title="{{ 'Add new service' | trans }}">{{ 'Add' | trans }}</a>
+
+<ul id="listFilterServices" class="listFilterContainer clear">
+  {% for source in sources %}
+    <li class="filterItem">
+      <div class="col1">
+        <span class="smallerText">{{ source.id }}</span><br>
+        <span class="smallerText">{{ source.type }}</span>
+      </div>
+      <div class="col2 box">
+        <a href="{{ url("mapbender_manager_repository_view",{"sourceId":source.id}) }}" class="title">{{ source.title }}<span class="smallerText"> {{ source.alias }}</span></a>
+        {% if source.description|trim|length > 0 %}
+          <div class="description">{{ source.description }}</div>
+        {% endif %}
+        <div class="buttonGroup">
+          <a class="button" href="{{ url("mapbender_manager_repository_view",{"sourceId":source.id}) }}" title="{{ 'View service metadata' | trans }}">{{ 'View' | trans }}</a>
+          <a class="button" href="{{ url("mapbender_manager_repository_delete",{"source":source.id,"return":"index"}) }} " title="{{ 'Delete service' | trans }}">{{ 'Delete' | trans }}</a>
+        </div>
+      </div>
+    </li>
+  {% endfor %}  
+</ul>
+
+<a class="button right" href="{{ url("mapbender_manager_repository_new") }}" title="{{ 'Add new service' | trans }}">{{ 'Add' | trans }}</a>
+<div class="clearContainer"></div>
 {% endblock %}
