--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.zoombar.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.zoombar.css
@@ -4,6 +4,10 @@
     width: 34px;
 }
 
+.mb-element-zoombar.inline {
+    position: static;
+}
+
 .mb-element-zoombar .pan {
     background: url('image/zoombar-bg-pan.png');
     height: 36px;
