css added,changed; configuration changed

--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base2.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base2.css
@@ -111,9 +111,10 @@ a, a:visited {
   border-top: 1px solid #a2c515;
 }
 .footer .mb-element-srsselector {
-/*  position: absolute;
-  top: 5px;*/
-  right: 0;
+    position: absolute;
+    right: 0px;
+/*   top: 5px;*/
+   
 }
 .footer .mb-element-srsselector select {
   width: 100%;
