--- a/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
@@ -1,6 +1,6 @@
 <div id="{{ id }}" class="mb-element mb-element-scaleselector">
 {% if configuration.label == true %}
-    <label for="scaleselector">{{ title|trans }} 1:</label>
+    <label for="scaleselector">{{ title|trans }}</label>
 {% endif %}
     <select id="scaleselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
 </div>
